...
            TaskReminderSection(reminder: $vm.reminder)

            Section {
                Button("timetable.weekly.tasks.edit.delete", role: .destructive) {
                    isShowingDeleteConfirmation = true
                }
                .accessibilityIdentifier("weeklyTask.delete.button")
            } footer: {
                Text("timetable.weekly.tasks.edit.delete.description")
            }
        }
        .navigationTitle(habit.habit.title)
        .navigationBarTitleDisplayMode(.inline)
...
                    }
                } label: {
                    Image(systemName: "checkmark")
                        .font(.headline.weight(.semibold))
                }
                .disabled(!viewModel.isSaveable)
                .accessibilityIdentifier("weeklyTask.edit.save.button")
            }
        }
        .onAppear {
            viewModel.setup(habit: habit)
        }
    }
...
